--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
 .jumbotron{
     background-image: url(img/jumbotron-bg.jpg);
     background-size: cover;
-    height: 100px;
+    height: 80vh;
     text-align: center;
     position: relative;
 }
